@@ -20,7 +20,7 @@
 package com.romraider.logger.ecu.profile;
 
 public interface UserProfileLoader {
-    String BACKUP_PATH = "profile_backup.xml";
+    String BACKUP_PROFILE = "/.RomRaider/profile_backup.xml";
 
     UserProfile loadProfile(String filePath);
 }
